# csvx

./: .gitignore  Cargo.toml  README.md  syntax.md
.github/workflows/: publish.yml
src/: lib.rs  main.rs
src/node/: add.rs  bitwise_and.rs  bitwise_or.rs  div.rs  equal.rs  fn_acos.rs  fn_acosh.rs  fn_asin.rs  fn_asinh.rs  fn_atan.rs  fn_atanh.rs  fn_avg.rs  fn_ceil.rs  fn_cos.rs  fn_cosh.rs  fn_floor.rs  fn_if.rs  fn_ln.rs  fn_log.rs  fn_log10.rs  fn_log2.rs  fn_pow.rs  fn_ref.rs  fn_round.rs  fn_sin.rs  fn_sinh.rs  fn_sqrt.rs  fn_sum.rs  fn_tan.rs  fn_tanh.rs  greater_than.rs  greater_than_equal.rs  left_shift.rs  less_than.rs  less_than_equal.rs  logical_and.rs  logical_or.rs  minus.rs  mod.rs  modulo.rs  (+8 more)
src/table/: calc.rs  expand.rs  export.rs  extend.rs  insert.rs  mod.rs  new.rs  remove.rs  shrink.rs  update.rs
src/token/: mod.rs  parse.rs  primitive_parse.rs
